--- a/TramUrWay.Android/Resources/layout/SideMenu.xml
+++ b/TramUrWay.Android/Resources/layout/SideMenu.xml
@@ -29,6 +29,6 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        android:text="Montpellier" />
 
 </LinearLayout>
