--- a/TramUrWay.Android/Resources/layout/StepItem.xml
+++ b/TramUrWay.Android/Resources/layout/StepItem.xml
@@ -22,7 +22,7 @@
         <TopAlignedImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_train_glow"
+            android:src="@drawable/train_glow"
             android:layout_alignTop="@+id/StepItem_Icon1"
             android:layout_alignBottom="@+id/StepItem_Icon1"
             android:layout_alignLeft="@+id/StepItem_Icon1"
@@ -32,7 +32,7 @@
             android:id="@+id/StepItem_Icon1"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/ic_train"
+            android:src="@drawable/train"
             android:layout_centerHorizontal="true"
             android:tint="#ffffff"
             android:layout_marginTop="72dp" />
@@ -40,7 +40,7 @@
         <TopAlignedImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_train_glow"
+            android:src="@drawable/train_glow"
             android:layout_alignTop="@+id/StepItem_Icon2"
             android:layout_alignBottom="@+id/StepItem_Icon2"
             android:layout_alignLeft="@+id/StepItem_Icon2"
@@ -50,7 +50,7 @@
             android:id="@+id/StepItem_Icon2"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/ic_train"
+            android:src="@drawable/train"
             android:layout_centerHorizontal="true"
             android:tint="#ffffff"
             android:layout_marginTop="72dp" />
@@ -78,7 +78,7 @@
             android:id="@+id/StepItem_Description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Information indisponible"
+            android:text=""
             android:textSize="@dimen/abc_text_size_body_1_material"
             android:textColor="@android:color/tertiary_text_light"
             android:layout_below="@+id/StepItem_Name"
