--- a/TramUrWay.Android/Resources/layout/LineItem.xml
+++ b/TramUrWay.Android/Resources/layout/LineItem.xml
@@ -20,8 +20,8 @@
         android:id="@+id/LineItem_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="false"
         android:layout_toEndOf="@+id/LineItem_Icon"
+        android:layout_toRightOf="@+id/LineItem_Icon"
         android:text="Name"
         android:textSize="@dimen/abc_text_size_subhead_material"
         android:textColor="@android:color/primary_text_light"
@@ -33,8 +33,10 @@
         android:layout_height="48dp"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:tint="@color/primary_dark_material_light"
         android:src="@drawable/ic_more_vert"
         android:focusable="true"
