--- a/TramUrWay.Android/Resources/layout/FavoritesFragment.xml
+++ b/TramUrWay.Android/Resources/layout/FavoritesFragment.xml
@@ -12,6 +12,7 @@
         android:text="Lignes favorites"
         android:textSize="@dimen/abc_text_size_body_2_material"
         android:paddingStart="16dp"
+        android:paddingLeft="16dp"
         android:height="48dp"
         android:gravity="center_vertical"
         android:textStyle="bold"
@@ -29,6 +30,7 @@
         android:text="Stations favorites"
         android:textSize="@dimen/abc_text_size_body_2_material"
         android:paddingStart="16dp"
+        android:paddingLeft="16dp"
         android:height="48dp"
         android:gravity="center_vertical"
         android:textStyle="bold"
