--- a/TramUrWay.Android/Resources/layout/StopActivity.xml
+++ b/TramUrWay.Android/Resources/layout/StopActivity.xml
@@ -49,6 +49,7 @@
                         android:text=""
                         android:textSize="@dimen/abc_text_size_body_2_material"
                         android:paddingStart="16dp"
+                        android:paddingLeft="16dp"
                         android:height="48dp"
                         android:gravity="center_vertical"
                         android:textStyle="bold"
@@ -66,6 +67,7 @@
                         android:text="Correspondances"
                         android:textSize="@dimen/abc_text_size_body_2_material"
                         android:paddingStart="16dp"
+                        android:paddingLeft="16dp"
                         android:height="48dp"
                         android:gravity="center_vertical"
                         android:textStyle="bold"
