--- a/TramUrWay.Android/Resources/layout/StopItem.xml
+++ b/TramUrWay.Android/Resources/layout/StopItem.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="false"
         android:layout_toEndOf="@+id/StopItem_Icon"
+        android:layout_toRightOf="@+id/StopItem_Icon"
         android:text="Name"
         android:textSize="@dimen/abc_text_size_subhead_material"
         android:textColor="@android:color/primary_text_light"
