--- a/TramUrWay.Android/Resources/layout/TimeStepItem.xml
+++ b/TramUrWay.Android/Resources/layout/TimeStepItem.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="false"
         android:layout_toEndOf="@+id/TimeStepItem_Icon"
+        android:layout_toRightOf="@+id/TimeStepItem_Icon"
         android:text="Name"
         android:textSize="@dimen/abc_text_size_subhead_material"
         android:textColor="@android:color/primary_text_light"
@@ -34,6 +35,7 @@
         android:textSize="@dimen/abc_text_size_body_1_material"
         android:textColor="@android:color/tertiary_text_light"
         android:layout_toEndOf="@+id/TimeStepItem_Name"
+        android:layout_toRightOf="@+id/TimeStepItem_Name"
         android:layout_centerVertical="true"
         android:layout_marginLeft="8dp" />
 
