--- a/TramUrWay.Android/Resources/layout/SideMenu.xml
+++ b/TramUrWay.Android/Resources/layout/SideMenu.xml
@@ -1,34 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
-    android:background="#4CAF50"
-    android:gravity="bottom"
+    android:layout_height="180dp"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/sym_def_app_icon" />
-
-    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="TramUrWay"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:layout_height="match_parent"
+        android:src="@drawable/montpellier"
+        android:scaleType="centerCrop" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/sidemenugradient" />
+
+    <ImageView
+        android:id="@+id/SideMenu_Icon"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_gravity="right"
+        android:src="@mipmap/ic_launcher"
+        android:layout_alignParentRight="false"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="8dp" />
+    
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Montpellier" />
+        android:layout_gravity="right"
+        android:text="Montpellier"
+        android:textColor="@color/secondary_text_default_material_light"
+        android:id="@+id/SideMenu_City"
+        android:layout_alignLeft="@+id/SideMenu_App"
+        android:layout_below="@+id/SideMenu_App" />
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:text="TramUrWay"
+        android:textColor="@color/primary_text_default_material_light"
+        android:id="@+id/SideMenu_App"
+        android:layout_alignTop="@+id/SideMenu_Icon"
+        android:layout_toRightOf="@+id/SideMenu_Icon"
+        android:layout_marginLeft="8dp"
+        android:textSize="@dimen/abc_text_size_large_material"
+        android:layout_marginTop="4dp" />
+
+</RelativeLayout>
