--- a/TramUrWay.Android/Resources/layout/LineActivity.xml
+++ b/TramUrWay.Android/Resources/layout/LineActivity.xml
@@ -33,72 +33,65 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <ScrollView
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <RelativeLayout
+                    android:id="@+id/LineActivity_RouteSwitchLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                    android:layout_height="48dp">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:id="@+id/LineActivity_RouteSwitchLayout">
-
-                        <Switch
-                            android:id="@+id/LineActivity_RouteSwitch"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:layout_margin="8dp"
-                            android:textOff="        "
-                            android:textOn="        " />
-
-                        <TextView
-                            android:id="@+id/LineActivity_RouteSwitch_LeftChoice"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_toStartOf="@+id/LineActivity_RouteSwitch"
-                            android:layout_toLeftOf="@+id/LineActivity_RouteSwitch"
-                            android:text="Left stop" />
-
-                        <TextView
-                            android:id="@+id/LineActivity_RouteSwitch_RightChoice"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_toEndOf="@+id/LineActivity_RouteSwitch"
-                            android:layout_toRightOf="@+id/LineActivity_RouteSwitch"
-                            android:text="Right stop" />
-
-                    </RelativeLayout>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:id="@+id/LineActivity_RouteChoiceLayout">
-
-                        <Spinner
-                            android:id="@+id/LineActivity_RouteChoice"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:spinnerMode="dropdown" />
-
-                    </RelativeLayout>
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/LineActivity_StopList"
-                        android:layout_width="match_parent"
+                    <Switch
+                        android:id="@+id/LineActivity_RouteSwitch"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/LineActivity_RouteChoiceLayout" />
+                        android:layout_centerInParent="true"
+                        android:layout_margin="8dp"
+                        android:textOff="        "
+                        android:textOn="        " />
+
+                    <TextView
+                        android:id="@+id/LineActivity_RouteSwitch_LeftChoice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toStartOf="@+id/LineActivity_RouteSwitch"
+                        android:layout_toLeftOf="@+id/LineActivity_RouteSwitch"
+                        android:text="Left stop" />
+
+                    <TextView
+                        android:id="@+id/LineActivity_RouteSwitch_RightChoice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@+id/LineActivity_RouteSwitch"
+                        android:layout_toRightOf="@+id/LineActivity_RouteSwitch"
+                        android:text="Right stop" />
 
                 </RelativeLayout>
 
-            </ScrollView>
+                <RelativeLayout
+                    android:id="@+id/LineActivity_RouteChoiceLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp">
+
+                    <Spinner
+                        android:id="@+id/LineActivity_RouteChoice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:spinnerMode="dropdown" />
+
+                </RelativeLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/LineActivity_StopList"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/LineActivity_RouteChoiceLayout" />
+
+            </RelativeLayout>
             
         </android.support.v4.widget.SwipeRefreshLayout>
 
