--- a/TramUrWay.Android/Resources/layout/FavoritesFragment.xml
+++ b/TramUrWay.Android/Resources/layout/FavoritesFragment.xml
@@ -1,44 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/FavoritesFragment_NoFavorites"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Lignes favorites"
-        android:textSize="@dimen/abc_text_size_body_2_material"
-        android:paddingStart="16dp"
-        android:paddingLeft="16dp"
+        android:layout_height="match_parent"
+        android:text="Vous n'avez pas encore de favoris enregistrés. Utilisez le menu pour parcourir les lignes et les stations."
+        android:textSize="@dimen/abc_text_size_medium_material"
         android:height="48dp"
-        android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:textColor="@color/colorAccent"
-        android:visibility="gone" />
+        android:layout_centerInParent="true"
+        android:layout_margin="16dp"
+        android:gravity="center_vertical|center_horizontal" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/FavoritesFragment_FavoriteLineList"
+    <LinearLayout
+        android:id="@+id/FavoritesFragment_Favorites"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Stations favorites"
-        android:textSize="@dimen/abc_text_size_body_2_material"
-        android:paddingStart="16dp"
-        android:paddingLeft="16dp"
-        android:height="48dp"
-        android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:textColor="@color/colorAccent" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Lignes"
+            android:textSize="@dimen/abc_text_size_body_2_material"
+            android:paddingStart="16dp"
+            android:paddingLeft="16dp"
+            android:height="48dp"
+            android:gravity="center_vertical"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+            android:visibility="gone" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/FavoritesFragment_FavoriteStopList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/FavoritesFragment_FavoriteLineList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Stations"
+            android:textSize="@dimen/abc_text_size_body_2_material"
+            android:paddingStart="16dp"
+            android:paddingLeft="16dp"
+            android:height="48dp"
+            android:gravity="center_vertical"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/FavoritesFragment_FavoriteStopList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+    
+</RelativeLayout>
