--- a/TramUrWay.Android/Resources/layout/LineMapFragment.xml
+++ b/TramUrWay.Android/Resources/layout/LineMapFragment.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    
+    <FrameLayout
+        android:id="@+id/MapFragment_Map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
