--- a/TramUrWay.Android/Resources/layout/RoutesActivity.xml
+++ b/TramUrWay.Android/Resources/layout/RoutesActivity.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +26,7 @@
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -36,59 +37,110 @@
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:layout_width="0px"
-                        android:layout_height="0px"/>
+                        android:layout_height="0px" />
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp">
+                        android:layout_marginBottom="8dp"
+                        android:id="@+id/RoutesActivity_FromLayout"
+                        android:layout_toLeftOf="@+id/RoutesActivity_FromButton">
 
-                        <EditText
-                            android:id="@+id/DeviceActivity_Name"
+                        <AutoCompleteTextView
+                            android:id="@+id/RoutesActivity_From"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Name"
+                            android:hint="Départ"
                             android:maxLines="1"
                             android:singleLine="true"
-                            android:textSize="@dimen/abc_text_size_headline_material"
-                            android:text="{Device.Name}"
-                            android:nextFocusUp="@id/DeviceActivity_Name"
-                            android:nextFocusLeft="@id/DeviceActivity_Name" />
+                            android:inputType="textNoSuggestions"
+                            android:textSize="@dimen/abc_text_size_subhead_material" />
 
                     </android.support.design.widget.TextInputLayout>
+
+                    <ImageButton
+                        android:layout_width="48dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/RoutesActivity_FromButton"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignTop="@+id/RoutesActivity_FromLayout"
+                        android:layout_alignBottom="@+id/RoutesActivity_FromLayout"
+                        android:src="@drawable/ic_place"
+                        android:background="@android:color/transparent"
+                        android:tint="@color/primary_text_default_material_dark" />
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/RoutesActivity_FromLayout"
+                        android:id="@+id/RoutesActivity_ToLayout"
+                        android:layout_toLeftOf="@+id/RoutesActivity_ToButton"
+                        android:layout_marginBottom="8dp">
 
-                        <EditText
+                        <AutoCompleteTextView
+                            android:id="@+id/RoutesActivity_To"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Description"
-                            android:maxLines="4"
-                            android:singleLine="false"
-                            android:textSize="@dimen/abc_text_size_subhead_material"
-                            android:text="{Device.Description}"
-                            android:id="@+id/DeviceActivity_Description" />
+                            android:hint="Destination"
+                            android:maxLines="1"
+                            android:singleLine="true"
+                            android:inputType="textNoSuggestions"
+                            android:textSize="@dimen/abc_text_size_subhead_material" />
 
                     </android.support.design.widget.TextInputLayout>
 
-                </LinearLayout>
+                    <ImageButton
+                        android:layout_width="48dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/RoutesActivity_ToButton"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignTop="@+id/RoutesActivity_ToLayout"
+                        android:layout_alignBottom="@+id/RoutesActivity_ToLayout"
+                        android:src="@drawable/ic_place"
+                        android:background="@android:color/transparent"
+                        android:tint="@color/primary_text_default_material_dark" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="Départ maintenant"
+                        android:id="@+id/RoutesActivity_Date"
+                        android:layout_below="@+id/RoutesActivity_ToLayout"
+                        android:gravity="center_vertical"
+                        android:layout_toLeftOf="@+id/RoutesActivity_DateButton" />
+
+                    <ImageButton
+                        android:layout_width="48dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/RoutesActivity_DateButton"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignTop="@+id/RoutesActivity_Date"
+                        android:layout_alignBottom="@+id/RoutesActivity_Date"
+                        android:src="@drawable/ic_schedule"
+                        android:background="@android:color/transparent"
+                        android:tint="@color/primary_text_default_material_dark" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/RoutesActivity_ToLayout"
+                        android:layout_marginTop="12dp">
+
+                    </LinearLayout>
+
+                </RelativeLayout>
 
             </android.support.v7.widget.Toolbar>
 
-            <android.support.design.widget.TabLayout
-                android:id="@+id/MainActivity_Tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/MainActivity_ViewPager"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/RoutesActivity_RoutesList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:listitem="@android:layout/simple_list_item_1" />
 
     </android.support.design.widget.CoordinatorLayout>
 
