Moved favorites and widgets to shared preferences. Fix some UI feedbacks.

--- a/TramUrWay.Android/Resources/layout/StopActivity.xml
+++ b/TramUrWay.Android/Resources/layout/StopActivity.xml
@@ -58,7 +58,8 @@
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/StopActivity_LineStopList"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:overScrollMode="never" />
 
                     <TextView
                         android:id="@+id/StopActivity_OtherLabel"
@@ -76,7 +77,8 @@
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/StopActivity_OtherStopList"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:overScrollMode="never" />
 
                 </LinearLayout>
 
