--- a/TramUrWay.Android/Resources/layout/FavoritesFragment.xml
+++ b/TramUrWay.Android/Resources/layout/FavoritesFragment.xml
@@ -38,7 +38,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/FavoritesFragment_FavoriteLineList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:overScrollMode="never" />
 
         <TextView
             android:layout_width="match_parent"
@@ -55,7 +56,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/FavoritesFragment_FavoriteStopList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:overScrollMode="never" />
 
     </LinearLayout>
     
