--- a/TramUrWay.Android/Resources/layout/AboutActivity.xml
+++ b/TramUrWay.Android/Resources/layout/AboutActivity.xml
@@ -16,14 +16,13 @@
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:theme="@style/AppTheme.AppBar">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                android:background="?attr/colorPrimary" />
 
         </android.support.design.widget.AppBarLayout>
 
