--- a/TramUrWay.Android/Resources/layout/HomeActivity.xml
+++ b/TramUrWay.Android/Resources/layout/HomeActivity.xml
@@ -16,28 +16,26 @@
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:theme="@style/AppTheme.AppBar">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                android:layout_height="?attr/actionBarSize" />
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/MainActivity_Tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-            
-        </android.support.design.widget.AppBarLayout>
 
+        </android.support.design.widget.AppBarLayout>
+        
         <android.support.v4.view.ViewPager
             android:id="@+id/MainActivity_ViewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-       
+
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
