Fix broken commit. Toolbar shadow is now visible on all devices.

--- a/TramUrWay.Android/Resources/layout/AboutActivity.xml
+++ b/TramUrWay.Android/Resources/layout/AboutActivity.xml
@@ -84,6 +84,12 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp" />
 
+            <View
+                android:id="@+id/shadow"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@drawable/shadow" />
+
         </RelativeLayout>
 
     </android.support.design.widget.CoordinatorLayout>
