--- a/TramUrWay.Android/Resources/layout/SettingsActivity.xml
+++ b/TramUrWay.Android/Resources/layout/SettingsActivity.xml
@@ -36,6 +36,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+            <View
+                android:id="@+id/shadow"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@drawable/shadow" />
+
         </RelativeLayout>
 
     </android.support.design.widget.CoordinatorLayout>
