Improve routes activity UI.

--- a/TramUrWay.Android/Resources/layout/RoutesActivity.xml
+++ b/TramUrWay.Android/Resources/layout/RoutesActivity.xml
@@ -149,12 +149,18 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/RoutesActivity_RoutesList"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/RoutesActivity_SwipeRefresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:listitem="@android:layout/simple_list_item_1" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/RoutesActivity_RoutesList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
