First working route search activity.

--- a/TramUrWay.Android/Resources/layout/RouteActivity.xml
+++ b/TramUrWay.Android/Resources/layout/RouteActivity.xml
@@ -44,6 +44,13 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
+                        <LinearLayout
+                            android:id="@+id/defaultFocus"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"
+                            android:layout_width="0px"
+                            android:layout_height="0px" />
+                        
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
